# pkg/handler/typeBusines.go
@@ -7,25 +7,8 @@ import (
 	"github.com/inzarubin80/booking-services"
 )
 
-// @Summary Create todo list
-// @Security ApiKeyAuth
-// @Tags lists
-// @Description create todo list
-// @ID create-list
-// @Accept  json
-// @Produce  json
-// @Param input body todo.TodoList true "list info"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /api/lists [post]
+
 func (h *Handler) createTypeBusines(c *gin.Context) {
-	//userId, err := getUserId(c)
-	//if err != nil {
-	//	newErrorResponse(c, http.StatusInternalServerError, err.Error())
-	//	return
-	//}
 
 	var input booking.TypeBusiness
 	if err := c.BindJSON(&input); err != nil {
@@ -48,18 +31,7 @@ type getAllTypeBusinesResponse struct {
 	Data []booking.TypeBusiness `json:"data"`
 }
 
-// @Summary Get All Lists 
-// @Security ApiKeyAuth
-// @Tags lists
-// @Description get all lists
-// @ID get-all-lists
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} getAllListsResponse
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /api/lists [get]
+
 func (h *Handler) getAllTypeBusines(c *gin.Context) {
 	
 	lists, err := h.services.TypeBusiness.GetAll()
@@ -73,25 +45,9 @@ func (h *Handler) getAllTypeBusines(c *gin.Context) {
 	})
 }
 
-// @Summary Get List By Id
-// @Security ApiKeyAuth
-// @Tags lists
-// @Description get list by id
-// @ID get-list-by-id
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} todo.ListItem
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /api/lists/:id [get]
 func (h *Handler) getTypeBusinesById(c *gin.Context) {
 	
-	//userId, err := getUserId(c)
-	//if err != nil {
-	//	newErrorResponse(c, http.StatusInternalServerError, err.Error())
-	//	return
-	//}
+
 
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
